syntax = "proto3";

package api;

option go_package = "client/api";

service HelloWorld {
  rpc SayHello(HelloRequest) returns (HelloResponse) {}

  rpc SayHelloAgain(HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
 string message = 1;
}
