syntax = "proto3";
package proto;

option go_package="helloworld/api";

service GreeterService {
  rpc SayHello(HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
